# pysteamtables

./: .coveragerc  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.cfg.in  setup.py
.github/.workflows/: pysteamtables_build_test.yml
.github/conda-env/: test-env.yml
.github/scripts/: run-tests.sh  set-conda-test-matrix.py  set-pip-test-matrix.py
.github/workflows/: pysteamtables_build_test.yml
conda-recipe/: bld.bat  build.sh  meta.yaml
pysteamtables/: CMakeLists.txt  __init__.py  steam_tables.pyx
pysteamtables/lib/: config.h  test.c
pysteamtables/tests/: create_test.py
recipe/: bld.bat  meta.yaml
